tests/NormalTests/paczka1/small_fuzzy/92668679.err
Error in line 2: DkNcA A801 41,0
Error in line 9: nfd A801 156,7
